# github-pr-slack-notifier

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml  claude-pr-review.yml  docker-build.yml  integration-live.yml  pr-checks.yml  pr-review-bot.yml
chart/: .argocd-source-github-pr-slack-notifier.yaml  Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  namespace.yaml  service.yaml
notes/: notifier-validation-pr.md
src/pr_slack_notifier/: __init__.py  adapters.py  app.py  config.py  engine.py  models.py  observability.py  plugins.py  reconcile.py  routing.py  state.py  status.py
tests/: test_adapters.py  test_app.py  test_config.py  test_engine.py  test_observability.py  test_reconcile.py  test_routing.py  test_state.py  test_status.py
tests/integration/: test_github_live.py
