[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-pr-slack-notifier"
version = "0.1.0"
description = "Reliable GitHub Pull Request to Slack reconciliation notifier"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "PyJWT[crypto]>=2.8.0",
  "prometheus-client>=0.20.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp-proto-http>=1.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pr_slack_notifier"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=pr_slack_notifier --cov-report=term-missing --cov-fail-under=90"
markers = [
  "integration: live integration tests that require real external API credentials",
  "e2e_polling: live end-to-end polling latency test against deployed reconciler",
]
